// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config readConfig: read config from YAML file 1`] = `
Object {
  "affectedRadiusPropertyNames": "",
  "asmHost": "localhost",
  "asmPassword": "asm",
  "asmPort": 2000,
  "asmRootPath": "/1.0/",
  "asmTenantId": "cfd95b7e-3bc7-4006-a4a8-a73a79c71255",
  "asmUIURL": "https://localhost/aiops/cfd95b7e-3bc7-4006-a4a8-a73a79c71255/topology-viewer?resourceId={RESOURCE_ID}",
  "asmUsername": "asm",
  "initialViewLocation": "51.505,-0.09",
  "initialZoomLevel": 7,
  "linkColorPropertyNames": "",
  "linkEdgeTypes": "*",
  "locationServiceHost": "",
  "locationServicePort": 4443,
  "locationTypesConfig": Object {},
  "popupIgnoreProperties": "_executionTime,_modifiedAt,_observedAt,_startedAt,beginTime,changeTime,createTime,_compositeId,_compositeOfIds,_createdAt,_status",
  "returnComposites": true,
  "tooltipProperties": "",
  "updateRate": 90000,
  "webServerPort": 1000,
  "webServerSecurePort": 3443,
}
`;

exports[`config readConfig: use defaults if YAML file does not exist 1`] = `
Object {
  "affectedRadiusPropertyNames": "",
  "asmHost": "localhost",
  "asmPassword": "asm",
  "asmPort": 443,
  "asmRootPath": "/1.0/",
  "asmTenantId": "cfd95b7e-3bc7-4006-a4a8-a73a79c71255",
  "asmUIURL": "https://localhost/aiops/cfd95b7e-3bc7-4006-a4a8-a73a79c71255/topology-viewer?resourceId={RESOURCE_ID}",
  "asmUsername": "asm",
  "initialViewLocation": "51.505,-0.09",
  "initialZoomLevel": 7,
  "linkColorPropertyNames": "",
  "linkEdgeTypes": "*",
  "locationServiceHost": "",
  "locationServicePort": 4443,
  "locationTypesConfig": Object {},
  "popupIgnoreProperties": "_executionTime,_modifiedAt,_observedAt,_startedAt,beginTime,changeTime,createTime,_compositeId,_compositeOfIds,_createdAt,_status",
  "returnComposites": true,
  "tooltipProperties": "",
  "updateRate": 90000,
  "webServerPort": 3000,
  "webServerSecurePort": 3443,
}
`;
